<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.activities.CommercialActivity">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/back_button"
            android:layout_centerVertical="true"
            android:text="Commercial Property"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/commercial_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/commercial_property"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <EditText
                    android:id="@+id/et_commercial"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:gravity="top|start"
                    android:hint="name"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword"
                    android:maxLines="2"
                    android:textColor="@color/grey3"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/grey3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/road_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/road"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <EditText
                    android:id="@+id/et_road"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:gravity="top|start"
                    android:hint="Road"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword"
                    android:maxLines="2"
                    android:textColor="@color/grey3"
                    android:textSize="14sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/grey3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ward_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/ward"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <EditText
                    android:id="@+id/et_ward"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:gravity="top|start"
                    android:hint=""
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword"
                    android:maxLines="2"
                    android:textColor="@color/grey3"
                    android:textSize="14sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/grey3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/circle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/circle"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <EditText
                    android:id="@+id/et_circle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:gravity="top|start"
                    android:hint="Circle"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword"
                    android:maxLines="2"
                    android:textColor="@color/grey3"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/grey3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vioalation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/type_of_violation"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_violation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:textColor="@color/grey3" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/photo_click_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/photo_inner_layout"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/upload_photo"
                        android:textColor="@color/grey4"
                        android:textSize="16sp"
                        android:textStyle="bold">

                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/ic_baseline_image_24" />

                        <TextView
                            android:id="@+id/filename"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="File Name.jpg"
                            android:textColor="@color/grey4"
                            android:textSize="12sp">

                        </TextView>
                    </LinearLayout>


                </LinearLayout>

                <View
                    android:id="@+id/verticalline"
                    android:layout_width="1dip"
                    android:layout_height="45dp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/grey3"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:contentDescription="TODO"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera">

                </ImageView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/image_view_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/grey"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_view"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_image_24">

                </ImageView>


            </LinearLayout>

            <Button
                android:id="@+id/form_sub_but"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/but_bg_ripple_grady_green"
                android:elevation="5dp"
                android:text="submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>