<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.ToiletActivity">


    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/back_button"
            android:layout_centerVertical="true"
            android:text="Toilet"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/top_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/name_of_the_toilet"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <EditText
                    android:id="@+id/et_toilet"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 0123456789"
                    android:fontFamily="sans-serif"
                    android:gravity="top|start"
                    android:hint="name"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword"
                    android:maxLines="2"
                    android:textColor="@color/grey3"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/grey3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ward_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/ward"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <EditText
                    android:id="@+id/et_ward"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 0123456789"
                    android:fontFamily="sans-serif"
                    android:gravity="top|start"
                    android:hint="ward"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword"
                    android:maxLines="2"
                    android:textColor="@color/grey3"
                    android:textSize="14sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/grey3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/circle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ward_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/circle"
                    android:textColor="@color/grey4"
                    android:textSize="16sp">

                </TextView>

                <EditText
                    android:id="@+id/et_circle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 0123456789"
                    android:fontFamily="sans-serif"
                    android:gravity="top|start"
                    android:hint="ward"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword"
                    android:maxLines="2"
                    android:textColor="@color/grey3"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/toilet_check_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/grey"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/circle_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/toilet_cleaned"
                        android:textColor="@color/grey4"
                        android:textSize="16sp"
                        android:textStyle="bold">

                    </TextView>

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Yes"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/radio_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:text="No"
                            android:textSize="14sp" />

                    </RadioGroup>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/grey4" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_checklist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:nestedScrollingEnabled="false"
                        android:scrollbars="none"
                        android:visibility="gone" />


                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/form_sub_but"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/but_bg"
                android:elevation="5dp"
                android:text="submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toilet_check_layout" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>